--- a/src/main/resources/view/login.html
+++ b/src/main/resources/view/login.html
@@ -1,48 +1,86 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>DTrun登录</title>
-		<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/axios.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.min.js"></script>
-	</head>
-	<body style=" background: #ffffff no-repeat center center fixed; background-size: 100%;">
+<head>
+	<meta charset="utf-8">
+	<title>DTrun登录</title>
+	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.min.js"></script>
+</head>
+<body style=" background: #ffffff no-repeat center center fixed; background-size: 100%;">
 
 
-		<div class="modal-dialog" style="margin-top: 10%;">
-			<div class="modal-content">
-				<div class="modal-header">
+<div id="loginSpace" class="modal-dialog" style="margin-top: 10%;">
+	<div class="modal-content">
+		<div class="modal-header">
 
-					<h4 class="modal-title text-center" id="myModalLabel">登录</h4>
-				</div>
-				<div class="modal-body" id="model-body">
-					<div class="form-group">
+			<h4 class="modal-title text-center" id="loginLabel">登录</h4>
+		</div>
+		<div class="modal-body" id="model-body">
+			<div class="form-group">
 
-						<input type="text" id="account" class="form-control" placeholder="用户名" autocomplete="off">
-					</div>
-					<div class="form-group">
+				<input type="text" id="account" class="form-control" placeholder="账号" autocomplete="off">
+			</div>
+			<div class="form-group">
 
-						<input type="password" id="password" class="form-control" placeholder="密码" autocomplete="off">
-					</div>
-				</div>
-				<div class="modal-footer">
-					<div class="form-group">
-						<button type="button" id="login" style="outline: none;" class="btn btn-primary form-control">登录</button>
-					</div>
-					<div class="form-group">
-						<button type="button" style="outline: none;" class="btn btn-default form-control">注册</button>
-					</div>
-
-				</div>
+				<input type="password" id="password" class="form-control" placeholder="密码" autocomplete="off">
 			</div>
 		</div>
+		<div class="modal-footer">
+			<div class="form-group">
+				<button type="button" id="login" style="outline: none;" class="btn btn-primary form-control">登录</button>
+			</div>
+			<div class="form-group">
+				<button type="button" id="goRegister" style="outline: none;" class="btn btn-default form-control">注册</button>
+			</div>
 
-	</body>
+		</div>
+	</div>
+</div>
+<div id="registerSpace" class="modal-dialog" style="margin-top: 10%;display: none;">
+	<div class="modal-content">
+		<div class="modal-header">
+
+			<h4 class="modal-title text-center" id="registerLabel">注册</h4>
+		</div>
+		<div class="modal-body" id="model-body">
+			<div class="form-group">
+
+				<input type="text" id="account" class="form-control" placeholder="账号" autocomplete="off">
+			</div>
+			<div class="form-group">
+
+				<input type="password" id="password" class="form-control" placeholder="密码" autocomplete="off">
+			</div>
+		</div>
+		<div class="modal-footer">
+			<div>
+				<span id="goLogin" class="pull-left" style="margin: 0 0 10px 0;cursor: pointer">已有账号?直接登录</span>
+			</div>
+
+			<div class="form-group">
+				<button type="button" id="register" style="outline: none;" class="btn btn-default form-control">注册</button>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+</body>
 </html>
 
 
 <script type="text/javascript">
+	$('#goRegister').click(function() {
+		$("#loginSpace").css('display', 'none');
+		$("#registerSpace").css('display', '');
+	});
+
+	$('#goLogin').click(function() {
+		$("#loginSpace").css('display', '');
+		$("#registerSpace").css('display', 'none');
+	});
+
 	$('#login').click(function() {
 		var account = $('#account').val();
 		var password = $('#password').val();
@@ -70,4 +108,9 @@
 
 		});
 	});
+
+	$('#register').click(function() {
+
+	});
+
 </script>
