--- a/src/main/resources/view/login.html
+++ b/src/main/resources/view/login.html
@@ -1,72 +1,74 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>DTrun登录</title>
-	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/axios.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <title>DTrun登录</title>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.min.js"></script>
 </head>
 <body style=" background: #ffffff no-repeat center center fixed; background-size: 100%;">
 
 
 <div id="loginSpace" class="modal-dialog" style="margin-top: 10%;">
-	<div class="modal-content">
-		<div class="modal-header">
+    <div class="modal-content">
+        <div class="modal-header">
 
-			<h4 class="modal-title text-center" id="loginLabel">登录</h4>
-		</div>
-		<div class="modal-body" id="model-body">
-			<div class="form-group">
+            <h4 class="modal-title text-center" id="loginLabel">登录</h4>
+        </div>
+        <div class="modal-body" id="model-body">
+            <div class="form-group">
 
-				<input type="text" id="account" class="form-control" placeholder="账号" autocomplete="off">
-			</div>
-			<div class="form-group">
+                <input type="text" id="account" class="form-control" placeholder="账号" autocomplete="off">
+            </div>
+            <div class="form-group">
 
-				<input type="password" id="password" class="form-control" placeholder="密码" autocomplete="off">
-			</div>
-		</div>
-		<div class="modal-footer">
-			<div class="form-group">
-				<button type="button" id="login" style="outline: none;" class="btn btn-primary form-control">登录</button>
-			</div>
-			<div class="form-group">
-				<button type="button" id="goRegister" style="outline: none;" class="btn btn-default form-control">注册</button>
-			</div>
+                <input type="password" id="password" class="form-control" placeholder="密码" autocomplete="off">
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="form-group">
+                <button type="button" id="login" style="outline: none;" class="btn btn-primary form-control">登录</button>
+            </div>
+            <div class="form-group">
+                <button type="button" id="goRegister" style="outline: none;" class="btn btn-default form-control">注册
+                </button>
+            </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
 <div id="registerSpace" class="modal-dialog" style="margin-top: 10%;display: none;">
-	<div class="modal-content">
-		<div class="modal-header">
+    <div class="modal-content">
+        <div class="modal-header">
 
-			<h4 class="modal-title text-center" id="registerLabel">注册</h4>
-		</div>
-		<div class="modal-body" id="model-body1">
+            <h4 class="modal-title text-center" id="registerLabel">注册</h4>
+        </div>
+        <div class="modal-body" id="model-body1">
 
-			<div class="form-group">
+            <div class="form-group">
 
-				<input type="text" id="registerAccount" class="form-control" placeholder="账号" autocomplete="off">
-			</div>
-			<div class="form-group">
+                <input type="text" id="registerAccount" class="form-control" placeholder="账号" autocomplete="off">
+            </div>
+            <div class="form-group">
 
-				<input type="password" id="registerPassword" class="form-control" placeholder="密码" autocomplete="off">
-			</div>
-		</div>
+                <input type="password" id="registerPassword" class="form-control" placeholder="密码" autocomplete="off">
+            </div>
+        </div>
 
-		<div class="modal-footer">
-			<div>
-				<span id="goLogin" class="pull-left" style="margin: 0 0 10px 0;cursor: pointer">已有账号?直接登录</span>
-			</div>
+        <div class="modal-footer">
+            <div>
+                <span id="goLogin" class="pull-left" style="margin: 0 0 10px 0;cursor: pointer">已有账号?直接登录</span>
+            </div>
 
-			<div class="form-group">
-				<button type="button" id="register" style="outline: none;" class="btn btn-default form-control" >注册</button>
-			</div>
+            <div class="form-group">
+                <button type="button" id="register" style="outline: none;" class="btn btn-default form-control">注册
+                </button>
+            </div>
 
-		</div>
+        </div>
 
-	</div>
+    </div>
 </div>
 
 </body>
@@ -74,60 +76,67 @@
 
 
 <script type="text/javascript">
-	$('#goRegister').click(function() {
-		$("#loginSpace").css('display', 'none');
-		$("#registerSpace").css('display', '');
-	});
+    $('#goRegister').click(function () {
+        $("#loginSpace").css('display', 'none');
+        $("#registerSpace").css('display', '');
+    });
 
-	$('#goLogin').click(function() {
-		$("#loginSpace").css('display', '');
-		$("#registerSpace").css('display', 'none');
-	});
+    $('#goLogin').click(function () {
+        $("#loginSpace").css('display', '');
+        $("#registerSpace").css('display', 'none');
+    });
 
-	$('#login').click(function() {
-		var account = $('#account').val();
-		var password = $('#password').val();
-		if (account.trim() == '' || account == undefined) {
-			alert('账号不能为空');
-			return;
-		}
-		if (password.trim() == '' || password == undefined) {
-			alert('密码不能为空');
-			return;
-		}
-		axios.post('http://localhost/user/login', {
-			account: account,
-			password: password,
-		}).then((response) => {
-			var result = response.data.message;
+    $('#login').click(function () {
+        var account = $('#account').val();
+        var password = $('#password').val();
+        if (account.trim() == '' || account == undefined) {
+            alert('账号不能为空');
+            return;
+        }
+        else if (password.trim() == '' || password == undefined) {
+            alert('密码不能为空');
+            return;
+        }
+        axios.post('http://localhost/user/login', {
+            account: account,
+            password: password,
+        }).then((response) => {
+            var result = response.data.message;
 
-			if (result == 'Success') {
-				alert('登录成功')
-			} else if (result == 'LoginRefuse') {
-				alert('账号已被封禁')
-			} else {
-				alert('账号或密码错误')
-			}
+            if (result == 'Success') {
+                alert('登录成功')
+            } else if (result == 'LoginRefuse') {
+                alert('账号已被封禁')
+            } else {
+                alert('账号或密码错误')
+            }
 
-		});
-	});
+        });
+    });
 
-	$('#register').click(function() {
+    $('#register').click(function () {
         var registerAccount = $('#registerAccount').val();
         var registerPassword = $('#registerPassword').val();
+        console.log(registerAccount)
+        if (registerAccount.trim() == '' || registerAccount == undefined) {
+            alert('账号不能为空');
+            return;
+        }
+        else if (registerPassword.trim() == '' || registerPassword == undefined) {
+            alert('密码不能为空');
+            return;
+        }
         axios.post('http://localhost/user/register', {
             account: registerAccount,
             password: registerPassword,
         }).then((response) => {
             var result = response.data.message;
-        if (result == 'Success') {
-           window.location.href="login.html";
-        }  else {
-            alert('注册失败');
-        }
-
-
-    });
+            if (result == 'Success') {
+                window.location.href = "login.html";
+            } else {
+                alert('注册失败');
+            }
+        });
     });
 
 </script>
