--- a/src/main/resources/view/header.html
+++ b/src/main/resources/view/header.html
@@ -147,7 +147,7 @@
 
 					<li class="nav-item dropdown">
 						<a href="#" class="nav-link profile-nav-link dropdown-toggle" title="User menu" data-toggle="dropdown">
-							<span class="mr-2 d-sm-inline d-none">Bony Gidden</span>
+							<span class="mr-2 d-sm-inline d-none username"></span>
 							<figure class="avatar avatar-sm">
 								<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="avatar">
 							</figure>
@@ -157,7 +157,7 @@
 								<figure class="avatar avatar-lg mb-3 border-0">
 									<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="image">
 								</figure>
-								<h5 class="mb-0">Bony Gidden</h5>
+								<h5 class="mb-0 username"></h5>
 							</div>
 							<div class="list-group list-group-flush">
 								<a href="#" class="list-group-item" data-sidebar-target="#settings">Settings</a>
