数据源搜索

--- a/src/main/resources/view/datasource.html
+++ b/src/main/resources/view/datasource.html
@@ -416,10 +416,10 @@
 	});
 
 
-	$(document).on("click", "#logout", function() {
-		window.location.href = "login.html";
-		$.removeCookie('token');
-	});
+	// $(document).on("click", "#logout", function() {
+	// 	window.location.href = "login.html";
+	// 	$.removeCookie('token');
+	// });
 
 	let isPinyin = false
 	let inputText = ''
