--- a/src/main/react/src/css/css2.css
+++ b/src/main/react/src/css/css2.css
@@ -1,3 +1,19 @@
+.steps-content {
+  margin-top: 16px;
+  border-radius: 2px;
+  width: 100%;
+  min-height: 100%;
+  padding-top: 20px;
+}
+
+.steps-action {
+  margin-top: 24px;
+}
+
+.ant-steps{
+  margin-top: 20px!important;
+}
+
 .ant-form-item-explain.ant-form-item-explain-error
 {
   color: red;
