--- a/src/main/react/src/css/css.css
+++ b/src/main/react/src/css/css.css
@@ -10,7 +10,18 @@
     float: right;
     margin: 16px 0 16px 24px;
 }
+::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: #F5F5F5;
+}
 
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #98F5FF;
+}
 .site-layout-background {
     background: #fff;
 }
