--- a/src/main/react/src/css/css.css
+++ b/src/main/react/src/css/css.css
@@ -5,7 +5,6 @@
     margin: 16px 24px 16px 0;
     background: rgba(255, 255, 255, 0.3);
 }
-
 .ant-row-rtl #components-layout-demo-top-side-2 .logo {
     float: right;
     margin: 16px 0 16px 24px;
@@ -66,6 +65,9 @@
 
 .login-form-button {
     width: 100%;
+}
+.title{
+    white-space: pre-wrap;
 }
 
 
